--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/CaptureComunist.PNG" alt="" />
+									<img src="images/CaptureComunist.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Comunist</h2>
+										<h2>Kofi Coke is a Comunist</h2>
 										<p>Thinks Kim-Jong Il is based</a>.</p>
 									</header>
 									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
