--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/MyCode.png" alt="" />
+									<img src="images/MyCode.PNG" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -96,7 +96,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/BreakoutCapture.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/BreakoutCapture.JPG" alt="" /></a>
 											<div class="inner">
 												<h4><a href="articles.html#four">Making Games</a></h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
