--- a/articles.html
+++ b/articles.html
@@ -83,6 +83,7 @@
                                     <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 									<ul class="actions">
 										<li><a href="#" class="button">View Github</a></li>
+										<li><a href="#" class="button">View Itch.io</a></li>
 									</ul>
 								</div>
 							</section>
