--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<li><a href="https://www.linkedin.com/in/richard-lam-071309152/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Richard_Lam7/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
 						<li><a href="https://github.com/KafkaIsK" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://kafkaisk.itch.io" class="icon brands fa-itch-io"><span class="label">itch.io</span></a></li>
 						<li><a href="#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
