--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 						<li><a href="https://www.linkedin.com/in/richard-lam-071309152/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Richard_Lam7/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
 						<li><a href="https://github.com/KafkaIsK" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
 						<li><a href="https://kafkaisk.itch.io" class="icon brands fa-itch-io"><span class="label">itch.io</span></a></li>
 						<li><a href="#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -113,8 +114,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="contact-form-process.php">
+									<form method="post" netlify>
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="Name" id="Name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="Email" name="email" id="Email" placeholder="Email" /></div>
@@ -127,8 +127,8 @@
 												</ul>
 											</div>
 										</div>
-									</form> -->
-									<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSceqz_gxW9WnrFc8v--qKzT2grEVm4oJ9TMjEjKVuncbHE2iQ/viewform?embedded=true" width="100%" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+									</form>
+									<!-- <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSceqz_gxW9WnrFc8v--qKzT2grEVm4oJ9TMjEjKVuncbHE2iQ/viewform?embedded=true" width="100%" height="720" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe> -->
 								</div>
 							</section>
 
