--- a/articles.html
+++ b/articles.html
@@ -17,9 +17,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/quinten-de-graaf-1KkTIBhf8sM-unsplash.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Richard Lam</a></h1>
+					<p>A chemistry graduate learning to code!</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -27,6 +26,7 @@
 						<li><a href="#two">E-Learning</a></li>
 						<li><a href="#three">Website</a></li>
                         <li><a href="#four">Games</a></li>
+						<li><a href="#five">Weather</a></li>
                         <li><a href="index.html">Back</a></li>
 					</ul>
 				</nav>
@@ -35,6 +35,8 @@
 						<li><a href="https://www.linkedin.com/in/richard-lam-071309152/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Richard_Lam7/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
 						<li><a href="https://github.com/KafkaIsK" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li> -->
+						<li><a href="https://kafkaisk.itch.io" class="icon brands fa-itch-io"><span class="label">itch.io</span></a></li>
 						<li><a href="index.html#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
@@ -62,7 +64,7 @@
 								<div class="container">
                                     <h3>E-Learning</h3>
                                     <span class="image fit"><img src="images/emmanuel-ikwuegbu-5ibH-03ORmU-unsplash.jpg" alt="" /></span>
-                                    <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+                                    <p>I have always been eager to learn new skills and to improve myself. After university, I have continued to learn and self-improve through online courses. I have found various courses that I can take and have used them to learn how to code as well as other skills. Notable sites that I have enjoyed learning from includes Codecademy and Edx. I continue to learn with any free time I have.</p>
                                 </div>
 							</section>
 
@@ -71,7 +73,10 @@
 								<div class="container">
                                     <h3>This Website!</h3>
                                     <span class="image fit"><img src="images/pexels-pixabay-270360.jpg" alt="" /></span>
-                                    <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+                                    <p>This websites is one of my first projects! I hope to use this website to be somewhat of my online cv; showcasing some of my achievements and projects, but also show projects that I am currently working on. Learning how to deploy webpages, design and photo editing have been skills that I have learnt through the creation of my own website. I have many ideas of how I can add or edit to these pages and can't wait to achieve them!</p>
+									<ul class="actions">
+										<li><a href="#" class="button">View Github</a></li>
+									</ul>
                                 </div>
 							</section>
                         
@@ -80,16 +85,28 @@
 								<div class="container">
                                     <h3>Game Making</h3>
                                     <span class="image fit"><img src="images/PongCapture.JPG" alt="" /></span>
-                                    <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+                                    <p>Making Games was the first thing I wanted to make after learning to code. The old retro 2D arcade games are a major inspiration for me and they provide a starting point to start coding due to their "simplicity". Starting with Phaser and following their tutorial as well as videos online, I have applied JavaScript that I have learnt into games that I can play. Recently, I have been playing around with LOVE, another game engine. I hope to one day upload a game to itch.io, so you can play it too!</p>
 									<ul class="actions">
-										<li><a href="#" class="button">View Github</a></li>
-										<li><a href="#" class="button">View Itch.io</a></li>
+										<li><a href="#" class="button disabled">View Github</a></li>
+										<li><a href="#" class="button disabled">View Itch.io</a></li>
 									</ul>
 								</div>
 							</section>
 
+							<section id="five">
+								<div class="container">
+                                    <h3>World Weather</h3>
+                                    <span class="image fit"><img src="images/WeatherAnimation.gif" alt="" /></span>
+                                    <p>This page uses current weather API from OpenWeatherMap to get the current weather conditions in any city from across the world. The page can also get the date and time of the last calculation, and also the current temperature and temperature minimum and maximum.</p>
+									<ul class="actions">
+										<li><a href="https://vigilant-tereshkova-9a24eb.netlify.app" class="button">View Page</a></li>
+										<li><a href="https://github.com/KafkaIsK/Weather" class="button">View Github</a></li>
+									</ul>
+                                </div>
+							</section>
+
                         <!-- Five -->
-                            <section id="five">
+                            <!-- <section id="examples">
 								<div class="container">
 									<h3>Elements</h3>
 
@@ -415,7 +432,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</section>
 
 								</div>
-							</section>
+							</section> -->
 					</div>
 
 				<!-- Footer -->
