--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/quinten-de-graaf-1KkTIBhf8sM-unsplash.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Richard Lam</a></h1>
+					<p>A chemistry graduate learning to code!</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -34,7 +33,7 @@
 						<li><a href="https://www.linkedin.com/in/richard-lam-071309152/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://www.xing.com/profile/Richard_Lam7/cv" class="icon brands fa-xing"><span class="label">Xing</span></a></li>
 						<li><a href="https://github.com/KafkaIsK" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li> -->
 						<li><a href="https://kafkaisk.itch.io" class="icon brands fa-itch-io"><span class="label">itch.io</span></a></li>
 						<li><a href="#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
@@ -54,10 +53,10 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>KafkaIsK</h2>
+										<h2>Richard Lam</h2>
 										<p>Chemisty Graduate looking to code!</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Always interested in learning to code, I finally took the dive after taking a module on Computational Chemistry during my degree and getting my first experience writing code for my assignments. Since then, I have continued my growth and am learning to code through online courses and videos, and creating my own projects. I am very much enjoying writing and learning to code and have big plans for my future!</p>
 								</div>
 							</section>
 
@@ -73,6 +72,7 @@
 										<li class="icon solid fa-coffee">Drink much coffee</li>
 										<li class="icon solid fa-lightbulb">Change  a lightbulb</li>
 										<li class="icon solid fa-users">Shadow clone technique</li>
+										<li class="icon solid fa-flask">Chemistry</li>
 									</ul>
 								</div>
 							</section>
@@ -87,21 +87,21 @@
 											<a href="#" class="image"><img src="images/lewis-keegan-gkiZ-F3yPiY-unsplash.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="articles.html#two">Taking online classes</a></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Always eager to learn new skills, I have found online courses on topics I am interested in.</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pexels-tima-miroshnichenko-6612382.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="articles.html#three">This website!</a></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>My own personal website, right here! I hope to use this website to showcase my projects. I have big ambitions for this site!</p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/BreakoutCapture.JPG" alt="" /></a>
 											<div class="inner">
 												<h4><a href="articles.html#four">Making Games</a></h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>Designing games is what initially attracted me to coding. I have always been a fan of retro 2D games and hope to create my own.</p>
 											</div>
 										</article>
 									</div>
