--- a/articles.html
+++ b/articles.html
@@ -52,10 +52,10 @@
 							<section id="one">
 								<div class="container">
 									<header class="major">
-										<h2>KafkaIsK</h2>
+										<h2>Richard Lam</h2>
 										<p>My Projects</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Here are a few projects that I am or have been working on along with a short description of each project. I have been undertaking various projects to explore and learn different code functalities as well as to reinforce my own understanding of coding. Here I have shown a few of my projects, larger and smaller ones, that I have finished or almost finished. I still have a lot more that I have yet to show on here, and have a lot more planned for what I want to make in the future.</p>
 								</div>
 							</section>
 
