--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 											<div class="col-6 col-12-xsmall"><input type="Email" name="email" id="Email" placeholder="Email" /></div>
 											<div class="col-12"><input type="text" name="Subject" id="Subject" placeholder="Subject" /></div>
 											<div class="col-12"><textarea name="Message" id="Message" placeholder="Message" rows="6"></textarea></div>
+											<div class="col-12"><div data-netlify-recaptcha="true"></div></div>
 											<div class="col-12">
 												<ul class="actions">
 													<li><input type="submit" class="primary" value="Send Message" /></li>
